[tool.poetry]
name = "streamlit-corr-crypto"
version = "0.1.0"
description = ""
authors = ["Jules Lehodey <juleslehodey31320@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.35.0"
pandas = "^2.2.2"
plotly = "^5.22.0"
nbformat = "^5.10.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
